team-beta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beta-nginx
  namespace: team-beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
